ClickBench 100M correctness campaign: bounded serving for every route, bulk-adoption carrier staging, array-contains scope proofs
Storage / ingestion
- Materialize bulk-adopted leaves at adoption, stage refused fused records' overflow carriers as immutable side
  pages and defer the leaf one flush epoch (SNAPSHOT_RETRY_NEXT_EPOCH) instead of pinning it in the intent log;
  BulkAdoptionDiagnostics + TIL counters; importer unwinds unlogged frames. A 100M load now runs at RSS <= 5 GB
  (7.06M carriers staged, 0 pinned) where every earlier attempt exhausted the arena.
- Floor-keyed record-size refusals; fused named kinds never demote to generic-inline (q20's 6,146 invisible records).
- IndexDef persisted-path comparison, HashAlgorithm buffer access fix, coordinator-lane global-dictionary abandonment
  writes a stale tombstone.

Query serving (all generally applicable, each with a differential witness and a mutation or budget seam)
- Array-contains column route: ancestry-exact scope resolution, seam records decided with the source matcher, element
  staging promise, exact certificate arithmetic, writer/derive purity for structural elements, planning-time decline
  when a field can hold non-array values (the interpreter raises XPTY0004).
- GroupDistinctAccumulator: grouped COUNT(DISTINCT) as one striped, heap-bounded state shared by all workers.
- GroupTableSpill: per-worker group tables spill into shared partition tables past a threshold.
- Hash-range passes: a group arm past its per-pass group budget restarts over partition ranges (table-level discard
  handle, accumulator pass filter, persistent per-partition selectors) - a ~100M-group query is bounded at any heap.
- ProjectionColumnStore.LeafColumnAccess: the sorted top-k and value-emission kernels read leaves through a resident
  or windowed (per-leaf LRU) access instead of whole-column fills, with the residency decided on the combined fill.
- Strict serving: under --require-vectorized-serving an arm failure fails th